<package>
  <name>genjava</name>
  <version>0.3.3</version>
  <description>
    Java ROS message and service generators.
  </description>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/genjava</url>
  <url type="repository">https://github.com/rosjava/genjava</url>
  <url type="bugtracker">https://github.com/rosjava/genjava/issues</url>

  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>

  <author>Daniel Stonier</author>

  <buildtool_depend version_gte="0.5.78">catkin</buildtool_depend>

  <build_depend>genmsg</build_depend>
  <build_depend>python-catkin-pkg</build_depend>
  <build_depend>python-rospkg</build_depend>
  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>rosjava_build_tools</build_depend>

  <run_depend>genmsg</run_depend>
  <run_depend>python-catkin-pkg</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>rosjava_bootstrap</run_depend>
  <run_depend>rosjava_build_tools</run_depend>

  <export>
    <message_generator>java</message_generator>
    <rosdoc config="rosdoc.yaml"/>
    <architecture_independent/>
  </export>
</package>
